--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ idna==2.10
 prettytable==2.1.0
 python-dotenv==0.15.0
 requests==2.25.1
+requests-toolbelt==0.9.1
 soupsieve==2.2
 urllib3==1.26.3
 wcwidth==0.2.5
