--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
 prettytable==2.1.0
+pylovepdf==1.3.2
 python-dotenv==0.15.0
 requests==2.25.1
 requests-toolbelt==0.9.1
